# unsafe-af

./: Cargo.toml  README.md
docs/: mental-model.typ
src/: main.rs
